--- a/ClassRecipes.Web/package.json
+++ b/ClassRecipes.Web/package.json
@@ -3,11 +3,15 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
+    "@types/jquery": "^3.3.29",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.1.7",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^5.0.0",
     "gulp-uglify": "^2.1.2",
     "rimraf": "^2.6.1",
-    "gulp-sass": "^3.1.0"
+    "typescript": "^3.2.4"
   }
 }
