Styled the tip.

--- a/ClassRecipes.Web/ClassRecipes.Web.csproj
+++ b/ClassRecipes.Web/ClassRecipes.Web.csproj
@@ -44,11 +44,29 @@
     <Content Update="Areas\Common\Views\Shared\_CollectionItem.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Areas\Recipes\Views\Recipe\Recipe.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Areas\Recipes\Views\Recipe\RecipeCard.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Areas\Recipes\Views\Recipe\RecipeCardWithImage.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Update="Areas\Recipes\Views\Recipe\RecipeCardNoImage.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Areas\Recipes\Views\Recipe\_Alert.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Areas\Recipes\Views\Recipe\_Hero.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Areas\Recipes\Views\Recipe\_Step.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
