--- a/ClassRecipes.Recipes/ClassRecipes.Recipes.csproj
+++ b/ClassRecipes.Recipes/ClassRecipes.Recipes.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ClassRecipes.Core\ClassRecipes.Core.csproj" />
     <ProjectReference Include="..\ClassRecipes.Ingredients\ClassRecipes.Ingredients.csproj" />
+    <ProjectReference Include="..\ClassRecipes.Tags\ClassRecipes.Tags.csproj" />
     <ProjectReference Include="..\ClassRecipes.Tools\ClassRecipes.Tools.csproj" />
   </ItemGroup>
 
